--- a/src/style/common.less
+++ b/src/style/common.less
@@ -8,7 +8,7 @@ body {
 }
 
 
-//:root:root 可以显式地让你所写内容的优先级更高一些. 覆盖vant样式全局样式
+//:root:root 可以显式地让你所写内容的优先级更高一些. 覆盖vant var全局样式
 :root:root {
   .submit-btn {
     border: none;
